--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div>
         <h1>Javascript</h1>
     </div>
-    <script src="./app.js"></script>
+    <div> <h1>sealTeams</h1>
+    </div>
+    <script src="./Arrays.js"></script>
 </body>
 </html>
