--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div>
         <h1>Javascript</h1>
     </div>
-    <div> <h1>sealTeams</h1>
+    <div> <button><h1>sealTeams</h1></button>
     </div>
-    <script src="./Arrays.js"></script>
+    <script src= "./function.js"></script>
 </body>
 </html>
